--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "grapesjs": "^0.21.10",
     "grapesjs-plugin-ckeditor": "^1.0.1",
     "grapesjs-preset-webpage": "^1.0.3",
+    "html-react-parser": "^5.1.17",
     "html-to-react": "^1.7.0",
     "html-to-text": "^9.0.5",
     "html2canvas": "^1.4.1",
